--- a/public/createNote.html
+++ b/public/createNote.html
@@ -42,6 +42,13 @@
         body {
             font-family: 'Open Sans', 'Segoe UI Light', 'Droid Sans', 'Helvetica', Verdana, sans-serif !important;
         }
+
+        /* Create a custom checkbox */
+        .checkmark {
+            height: 25px;
+            width: 25px;
+            background-color: #eee;
+        }
     </style>
 </head>
 
@@ -49,6 +56,8 @@
     <form action="/create/note" enctype="multipart/form-data" method="POST">
         <input name="name" placeholder="note name" />
         <input type="file" name="image" accept="image/*" />
+        <input class="checkmark" value="showname" type="checkbox" name="showname"/> <label>Show Name</label>
+        <br>
         <input type="submit" value="Upload Photo" />
     </form>
 </body>
