--- a/public/login.html
+++ b/public/login.html
@@ -23,7 +23,7 @@
     window.snapKitInit = () => {
         snap.loginkit.mountButton("snap-login", {
             clientId: "bf5c56e7-6705-4688-a85d-da91f948e74f",
-            redirectURI: "http://localhost:80/login.html",
+            redirectURI: "https://hw.yaznic.me/login.html",
             scopeList: [
                 "user.display_name",
             ],
